--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"git.enabled": false,
+	"git.enabled": true,
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"editor.tabSize": 4,
     "editor.detectIndentation": false,
