--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "NODE_ENV=staging npx back-end-config start",
+		"start": "NODE_TLS_REJECT_UNAUTHORIZED=0 NODE_ENV=staging npx back-end-config start",
 		"build": "npx back-end-config build",
 		"lint": "eslint --cache --config node_modules/@calme1709/back-end-config/.eslintrc.js --ext ts,tsx src/**/*",
 		"lint-perf": "TIMING=1 eslint --config node_modules/@calme1709/back-end-config/.eslintrc.js --ext ts,tsx src/**/*"
