--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,14 +19,15 @@
   },
   "homepage": "https://github.com/Calme1709/SSLManager#readme",
   "devDependencies": {
-    "@calme1709/front-end-config": "^2.0.6",
+    "@calme1709/front-end-config": "^2.0.8",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.7"
   },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0"
   }
 }
