--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -8,6 +8,10 @@ RUN npm install
 
 RUN npm run build
 
+RUN rm -rf node_modules/
+
+RUN npm install --only=production
+
 EXPOSE 80
 
 CMD [ "node", "dist/build.js" ]
