--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -8,8 +8,6 @@ RUN npm install
 
 RUN npm run build
 
-WORKDIR /usr/src/app/dist
-
 FROM nginx
-COPY --from=builder ./ /usr/share/nginx/html
+COPY --from=builder /usr/src/app/dist/ /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
