--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "ES5",
-		"module": "commonjs",
+		"module": "CommonJS",
 		"lib": [
 			"ESNext",
 			"dom"
@@ -23,19 +23,17 @@
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"esModuleInterop": true,
-        "watch": false,
-        "resolveJsonModule": true,
-        "baseUrl": "src/",
+		"watch": false,
+		"resolveJsonModule": true,
+		"baseUrl": "src/",
         "paths": {
             "@middleware": [ "middleware/index.ts" ],
             "@routes": [ "routes/index.ts" ],
 			"@utils": [ "utils/index.ts" ],
+			"@utils/*": [ "utils/*"],
 			"@config": [ "config.ts" ],
 			"@services/*": [ "services/*" ],
 			"@models/*": [ "models/*" ]
         }
-	},
-	"include": [
-		"./src"
-	]
+	}
 }
