All: Update the names of the modules, this gives clearer output in build logs and the like

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@calme1709/sslmanager-frontend",
+  "name": "frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
