Backend: Decrease size and increase security and reliablity of docker builds

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,19 +1,21 @@
-FROM node:latest
+FROM node:lts-alpine@sha256:2ae9624a39ce437e7f58931a5747fdc60224c6e40f8980db90728de58e22af7c
 
-RUN apt install openssl
+RUN apk add dumb-init openssl python3 make gcc musl-dev g++
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY --chown=node:node . .
 
-RUN npm install
+RUN npm ci
 
-RUN npm run build
+RUN ls /usr/src/app/node_modules
 
-RUN rm -rf node_modules/
+ENV NODE_ENV production
 
-RUN npm install --only=production
+RUN npm ci
 
-EXPOSE 80
+RUN ls /usr/src/app/node_modules/
 
-CMD [ "node", "dist/build.js" ]
+USER node
+
+CMD [ "dumb-init", "node", "dist/build.js" ]
