Backend: Remove dom library from tsconfig:

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -3,8 +3,7 @@
 		"target": "ES5",
 		"module": "CommonJS",
 		"lib": [
-			"ESNext",
-			"dom"
+			"ESNext"
         ],
 		"removeComments": true,
 		"downlevelIteration": true,
