Backend: Add DOM as a typescript lib due to it being a dependency of puppeteer

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -3,7 +3,8 @@
 		"target": "ES5",
 		"module": "CommonJS",
 		"lib": [
-			"ESNext"
+			"ESNext",
+			"DOM"
         ],
 		"removeComments": true,
 		"downlevelIteration": true,
